--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+experiment_results/ filter=lfs diff=lfs merge=lfs -text
