--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 experiment_results/ filter=lfs diff=lfs merge=lfs -text
 .txt filter=lfs diff=lfs merge=lfs -text
+.ipynb filter=lfs diff=lfs merge=lfs -text
