--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,5 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 experiment_results/ filter=lfs diff=lfs merge=lfs -text
-.txt filter=lfs diff=lfs merge=lfs -text
-.ipynb filter=lfs diff=lfs merge=lfs -text
+*.ipynb filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
